--- a/app/src/main/res/layout/device_adapter_view.xml
+++ b/app/src/main/res/layout/device_adapter_view.xml
@@ -3,13 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    //text view for the list of tvDevices which are connected
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvDeviceName"
         android:textSize="15sp"/>
-
+    //text view list for all of the device addresses
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
